<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <!-- Title -->

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/df_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Co-working"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintEnd_toEndOf="@+id/ivImage"
                app:layout_constraintStart_toStartOf="@+id/ivImage"
                app:layout_constraintTop_toBottomOf="@+id/ivImage" />

            <!-- Full Name -->
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/mobile_number_or_email"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <!-- Mobile Number -->
            <EditText
                android:id="@+id/etFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_bg"
                android:hint="Enter mobile number or email"
                android:padding="12dp"
                android:inputType="text"
                android:textSize="13sp"
                android:imeOptions="actionNext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFullName" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_bg"
                android:hint="Enter password"
                android:padding="12dp"
                android:inputType="text"
                android:textSize="13sp"
                android:imeOptions="actionDone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMobile" />

            <ImageView
                android:id="@+id/ivPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:elevation="12dp"
                android:padding="12dp"
                android:src="@drawable/open_eye"
                app:layout_constraintBottom_toBottomOf="@+id/etPass"
                app:layout_constraintEnd_toEndOf="@+id/etPass"
                app:layout_constraintTop_toTopOf="@+id/etPass" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateAccount"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="6dp"
                android:backgroundTint="@color/btn_blue"
                android:fontFamily="@font/poppins_semibold"
                android:text="Log In"
                android:textColor="@color/white"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toTopOf="@id/clBt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progressLogin"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:elevation="20dp"
                android:indeterminateTint="@android:color/white"
                android:progressTint="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btnCreateAccount"
                app:layout_constraintEnd_toEndOf="@id/btnCreateAccount"
                app:layout_constraintStart_toStartOf="@id/btnCreateAccount"
                app:layout_constraintTop_toTopOf="@id/btnCreateAccount" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tvSwitchToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Existing user? "
                    android:textColor="@color/text_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvSignUP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/create_an_account"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/tvSwitchToLogin"
                    app:layout_constraintTop_toTopOf="@+id/tvSwitchToLogin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>